plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'dev.sbytmacke'
// Borrar la versión para poder ejecutar el jpackage

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'dev.sbytmacke.tokenhelper'
    mainClass = 'dev.sbytmacke.tokenhelper.AppMain'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    // Testing
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    // MongoDb
    implementation("org.mongodb:mongodb-driver-sync:4.10.2")

    // Logback
    implementation("ch.qos.logback:logback-classic:1.4.7")

    // Server
    //implementation("javax.servlet:javax.servlet-api:4.0.1")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }


}

/*jpackage {
    appImage {
        icon = 'src/main/resources/icons/main_icon.png'
    }
}*/


jlinkZip {
    group = 'distribution'
}

jar {
    doFirst {
        def serviceDir = file("$buildDir/META-INF/services")
        serviceDir.deleteDir()
        serviceDir.mkdirs()
    }

    manifest {
        attributes "Main-Class": "dev.sbytmacke.tokenhelper.AppMain"
    }

    // Include service files from the buildDir.
    from fileTree(buildDir).matching { include 'META-INF/services/*' }
}

//java --module-path C:\Program Files\javafx-sdk-17.0.8\lib --add-modules javafx.controls,javafx.fxml -jar TokenHelper.jar
